@@ -1,0 +1,27 @@
+$LOAD_PATH.unshift(File.join(File.dirname(__FILE__), '..', 'lib'))
+require 'ernie'
+
+module Test
+  # Add two numbers together
+  def add(a, b)
+    a + b
+  end
+
+  # Return the given number of bytes
+  def bytes(n)
+    'x' * n
+  end
+
+  # Sleep for +sec+ and then return :ok
+  def slow(sec)
+    sleep(sec)
+    :ok
+  end
+
+  # Throw an error
+  def error
+    raise "abandon hope!"
+  end
+end
+
+Ernie.expose(:test, Test)
