@@ -1,3 +1,9 @@
+=
+  * API Additions
+    * Add Ernie.expose
+  * Internal Changes
+    * Remove 15s internal timeout
+
 = 1.1.0 / 2009-10-28
   * Major changes
     * Remove dependency on Erlectricity
